--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -30,3 +30,9 @@ body {
 figcaption {
     background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
 }
+
+@media (max-width: 640px) { 
+    .number {
+        display: none;
+    }
+ }
