chore: cleanup + add loading state

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -27,7 +27,7 @@ body {
     background-clip: padding-box;
   }
 
-figcaption {
+.drop-shadow {
     background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
 }
 
